--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "host": "next dev --hostname 192.168.1.62",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start --hostname 192.168.1.62",
     "lint": "next lint"
   },
